# ITMO

./: .gitignore  README.md  index.html  params.json
Course 2/Algorithms_and_Data_Structures/Lab1/: CMakeLists.txt
Course 2/Algorithms_and_Data_Structures/Lab1/src/: OrderedList.cpp  main.cpp
Course 2/Algorithms_and_Data_Structures/Lab1/src/OrderedList/: CodeParser.cpp  HashTable.cpp  OrderedList.cpp
Course 2/Algorithms_and_Data_Structures/Lab1/src/OrderedList/headers/: CodeParser.h  HashTable.h  OrderedList.h
Course 2/Algorithms_and_Data_Structures/Lab1/src/headers/: HashTable.h
Course 2/Algorithms_and_Data_Structures/Lab1/src/resources/: sample.cpp
Course 2/Algorithms_and_Data_Structures/Lab4/: CMakeLists.txt
Course 2/Algorithms_and_Data_Structures/Lab4/src/: main.cpp
Course 2/Algorithms_and_Data_Structures/Lab4/src/algorithms/: algorithms.cpp  algorithms.h
Course 2/Algorithms_and_Data_Structures/Lab4/src/graph/: Graph.h  GraphBuilder.cpp  GraphBuilder.h
Course 2/Algorithms_and_Data_Structures/Labs2-3/: CMakeLists.txt  Labs2-3
Course 2/Algorithms_and_Data_Structures/Labs2-3/src/: main.cpp
Course 2/Algorithms_and_Data_Structures/Labs2-3/src/algorithms/: algorithms.cpp  algorithms.h
Course 2/Algorithms_and_Data_Structures/Labs2-3/src/graph/: Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h
Course 2/Algorithms_and_Data_Structures/Labs2-3/workspace/: GraphAlgorithms  formatTimestamps.rb  runExperiment31a.sh  runExperiment31b.sh  runExperiment32a.sh  runExperiment32b.sh  runExperiment33.sh  runExperiment34a.sh  runExperiment34b.sh  runExperiments.sh  runLab2Experiments.sh
Course 2/System_software/Lab4(Processes)/: CMakeLists.txt
Course 2/System_software/Lab4(Processes)/src/sortAlgorithms/: Algorithms.cpp  Algorithms.h
Course 2/System_software/Lab4(Processes)/workspace/: doSorts.sh
Course 3/Lab1(bitblt)/: lab1.cpp
course_2/algorithms_and_data_structures/exam(max_conherence)/: CMakeLists.txt
course_2/algorithms_and_data_structures/exam(max_conherence)/src/: main.cpp
course_2/algorithms_and_data_structures/exam(max_conherence)/src/graph/: GraphBuilder.cpp  GraphBuilder.h
course_2/system_software/Lab2(Memory allocation)/: CMakeLists.txt
course_2/system_software/Lab2(Memory allocation)/src/: main.cpp
course_2/system_software/Lab2(Memory allocation)/src/memoryManagers/: BasePointerMapper.cpp  FileMapper.cpp
course_2/system_software/Lab2(Memory allocation)/src/sortAlgorithms/: Algorithms.cpp
course_2/system_software/Lab6(Keylogger)/: CMakeLists.txt
course_2/system_software/Lab6(Keylogger)/src/: keytables.cpp  keytables.h
course_2/system_software/Lab6(Keylogger)/workspace/: keylog.txt
course_3/semester_6/distributed_computations/lab_1/: CMakeLists.txt  ipc.h  main.c
course_3/semester_6/distributed_computations/lab_1/src/: main.c
course_3/semester_6/distributed_computations/lab_1/src/lib/: include.h  init.lib.c  init.lib.h  ipc.c  run.lib.c  run.lib.h  structs.h
course_3/semester_6/distributed_computations/lab_1/src/lib/headers/: include.h  init.lib.h  run.lib.h  structs.h
course_3/semester_6/distributed_computations/lab_1/src/lib/processes/: init.lib.c  ipc.c  run.lib.c
course_3/semester_6/distributed_computations/lab_2/: CMakeLists.txt
course_3/semester_6/distributed_computations/lab_2/src/: main.c
course_3/semester_6/distributed_computations/lab_2/src/lib/: ipc.c  structs.h
course_3/semester_6/distributed_computations/lab_3/: CMakeLists.txt
course_3/semester_6/distributed_computations/lab_3/src/: main.c
course_3/semester_6/distributed_computations/lab_3/src/lib/core/: banking.c  init.lib.c  ipc.c  run.lib.c  util.c
course_3/semester_6/distributed_computations/lab_4/: CMakeLists.txt  init.lib.h  ipc.c  mutex.lib.c  priority_queue.h  run.lib.h  util.c  util.h
course_3/semester_6/distributed_computations/lab_4/src/: main.c
course_3/semester_6/distributed_computations/lab_4/src/lib/core/: init.lib.c  ipc.c  mutex.lib.c  run.lib.c
course_3/semester_6/distributed_computations/lab_4/src/lib/data_structures/: priority_queue.c  priority_queue.h
course_3/semester_6/distributed_computations/lab_5/: CMakeLists.txt  bank_robbery.c  banking.c  init.lib.h  ipc.c  lamport.h  main.c  run.lib.c  run.lib.h
course_3/semester_6/distributed_computations/lab_5/src/: main.c
course_3/semester_6/distributed_computations/lab_5/src/lib/core/: banking.c  init.lib.c  ipc.c  run.lib.c
course_3/semester_6/distributed_computations/pa4/: CMakeLists.txt  banking.c  include.h  init.lib.c  main.c  priority_queue.c  run.lib.c  structs.h
course_4/computer_graphics/lab_2(opengl)/: CMakeLists.txt
course_4/computer_graphics/lab_2(opengl)/src/: main.cpp
course_4/computer_graphics/lab_2(opengl)/src/lib/: Game.cpp  Painter.cpp  WorldEngine.cpp
course_4/computer_graphics/lab_2(opengl)/src/lib/include/: Game.h  Painter.h  WorldEngine.h  include.h
course_4/io_systems/lab_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  entranse_task.cbp  lab_1  readme.md  scheme.xml
course_4/io_systems/lab_1/src/: bus.cpp  icconf.cpp  icconf.h  input_capture.cpp  input_capture.h  main.cpp  mem.cpp  mem.h  mips32.cpp  mips32.h
course_4/io_systems/lab_1/src/lib/: bus.cpp  core.cpp  icconf.cpp  input_capture.cpp  mem.cpp  mips32.cpp
course_4/io_systems/lab_1/src/lib/include/: addresses.h  buffer.h  bus.h  common.h  core.h  edge_detector.h  icconf.h  prescaler.h  timer1.h
course_4/io_systems/lab_1/src/lib/include/bus/: addresses.h  bus.h
course_4/io_systems/lab_1/src/lib/include/input_capture/: config.h  input_capture.h
course_4/io_systems/lab_1/src/lib/src/: buffer.cpp  bus.cpp  core.cpp  edge_detector.cpp  icconf.cpp  prescaler.cpp  timer1.cpp
course_4/io_systems/lab_1/systemc-2.3.1a/lib-linux64/pkgconfig/: systemc.pc
course_4/io_systems/lab_1/systemc-2.3.1a/objdir/: Makefile  config.status  libtool
course_4/io_systems/lab_1/systemc-2.3.1a/objdir/docs/: Makefile
course_4/io_systems/lab_1/systemc-2.3.1a/objdir/examples/: Makefile
course_4/io_systems/lab_1/systemc-2.3.1a/objdir/src/: Makefile
(+1632 files in other folders)
